fix room boxes on mobile

--- a/website/static/website/css/style.css
+++ b/website/static/website/css/style.css
@@ -2,16 +2,6 @@
 /* CSS generated by http://lavishbootstrap.com */
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 
-/* room-list diff size fix */
-/* http://stackoverflow.com/questions/24571062/gap-in-bootstap-stacked-rows/24571644#24571644 */
-@media (min-width: 1200px) {
-    .portfolio>.clear:nth-child(3n)::before {
-      content: '';
-      display: table;
-      clear: both;
-    }
-}
-
 .img-center {
     margin: auto;
 }
@@ -23,10 +13,12 @@
   padding:0px;
 }
 
+@media (min-width: 1200px) {
 .equal, .equal > div[class*='col-'] {
     display: -webkit-flex;
     display: flex;
     flex:1 1 auto;
+}
 }
 
 html {
